--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aquí vamos a hacer un blog post</h1>
+    <h1>Bienbenidos a hyperblog</h1>
     <p>Este es el párrago de inicio</p>
 </body>
 </html>
